[package]
name = "post-haste"
version = "0.6.0"
edition = "2024"

[dependencies]
const_env = "0.1.4"

# Embassy Dependencies
[target.'cfg(target_os = "none")'.dependencies]
embassy-executor = "0.9.1"
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
portable-atomic = { version = "1.11.0" }


# Tokio Dependencies
[target.'cfg(not(target_os = "none"))'.dependencies]
tokio = { version = "1.45.1", features = ["full"] }
once_cell = { version = "1.21.3" }
portable-atomic = { version = "1.11.0" }
