[package]
edition = "2024"
name = "tinyc6"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "tinyc6"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.1.0", features = ["esp32c6", "unstable"] }

esp-rtos = { version = "0.3.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c6",
] }

esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32c6"] }

embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
esp-alloc = "0.10.0"
panic-rtt-target = "0.2.0"
rtt-target = "0.6.2"
embassy-executor = { version = "0.10.0", features = [] }
embassy-time = "0.5.0"

critical-section = "1.2.0"
static_cell = "2.1.1"

post-haste = { path = "../../" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
